Added POST to create entitlement objects
